--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,8 +37,7 @@ jobs:
 
   build-large:
     # The type of runner that the job will run on
-    runs-on: arc-runner-set
-    group: large
+    runs-on: arc-runner-set-large
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
